--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "p-4-gamers",
   "private": true,
+  
   "version": "0.0.0",
+  "proxy": "https://localhost:7173/",
   "type": "module",
   "scripts": {
     "dev": "vite",
